--- a/example/gogs_zh/statement.html
+++ b/example/gogs_zh/statement.html
@@ -22,7 +22,7 @@
         <p>如果当前文档生成时间太久，请到 书栈(BookStack.CN) 获取最新的文档，以跟上知识更新换代的步伐。</p>
         <p>文档地址：<a href="http://www.bookstack.cn/books/gogs_zh">http://www.bookstack.cn/books/gogs_zh</a></p>
         <p>书栈官网：<a href="http://www.bookstack.cn">http://www.bookstack.cn</a></p>
-        <p>书栈开源：<a href="https://github.com/TruthHun">https://github.com/TruthHun</a></p>
+        <p>书栈开源：<a href="https://github.com/jmt99">https://github.com/jmt99</a></p>
         <p><strong>分享，让知识传承更久远！</strong> 感谢知识的创造者，感谢知识的分享者，也感谢每一位阅读到此处的读者，因为我们都将成为知识的传承者。</p>
     </div>
 </body>
